--- a/templates/chatbot/chatbot.html
+++ b/templates/chatbot/chatbot.html
@@ -20,11 +20,13 @@
 					type="text"
 					id="user-input"
 					placeholder="메시지를 입력하세요..."
+					autofocus
 					onkeydown="if(event.key==='Enter') addMessage()" />
 				<button onclick="addMessage()">보내기</button>
 			</div>
 		</div>
 
 		<script src="{% static 'js/chatbot.js' %}"></script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	</body>
 </html>
