--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -14,6 +14,7 @@
 			<div class="nav-container">
 				<a href="{% url 'chatbot-index' %}" class="nav-logo">Main</a>
 				<ul class="nav-menu">
+					<li class="nav-item"><a href="{% url 'chatbot-chat' %}" class="nav-link">ChatBot</a></li>
 					<li class="nav-item"><a href="{% url 'user-login-register' %}" class="nav-link">login</a></li>
 					
 				</ul>
