--- a/templates/chatbot/chatbot.html
+++ b/templates/chatbot/chatbot.html
@@ -1,32 +1,36 @@
-<!DOCTYPE html>
-<html lang="ko">
-	<head>
-		<meta charset="UTF-8" />
-		<title>와인 입문 가이드 챗봇</title>
+<!-- prettier-ignore -->
+{% extends 'base/index.html' %} 
+{% block title %}와인 입문 가이드 챗봇{% endblock %} 
 
-		{% load static %}
-		<link rel="stylesheet" href="{% static 'css/chatbot.css' %}" />
-	</head>
-	<body>
-		{% csrf_token %}
-		<div class="chat-wrapper">
-			<div class="chat-box" id="chat-box">
-				<div class="message bot">
-					<div class="message-content">안녕하세요! 무엇을 도와드릴까요?</div>
-				</div>
-			</div>
-			<div class="input-box">
-				<input
-					type="text"
-					id="user-input"
-					placeholder="메시지를 입력하세요..."
-					autofocus
-					onkeydown="if(event.key==='Enter') addMessage()" />
-				<button onclick="addMessage()">보내기</button>
-			</div>
+{% block css %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/index.css' %}" />
+<link rel="stylesheet" href="{% static 'css/chatbot.css' %}" />
+{% endblock %}
+
+<!-- prettier-ignore -->
+{% block js %}
+<script src="{% static 'js/chatbot.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% endblock %}
+
+<!-- prettier-ignore -->
+{% block content %}
+{% csrf_token %}
+<div class="chat-wrapper">
+	<div class="chat-box" id="chat-box">
+		<div class="message bot">
+			<div class="message-content">안녕하세요! 무엇을 도와드릴까요?</div>
 		</div>
-
-		<script src="{% static 'js/chatbot.js' %}"></script>
-		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	</body>
-</html>
+	</div>
+	<div class="input-box">
+		<input
+			type="text"
+			id="user-input"
+			placeholder="메시지를 입력하세요..."
+			autofocus
+			onkeydown="if(event.key==='Enter') addMessage()" />
+		<button onclick="addMessage()">보내기</button>
+	</div>
+</div>
+{% endblock %}
