--- a/templates/user/login_register.html
+++ b/templates/user/login_register.html
@@ -3,16 +3,21 @@
 {% block title %}로그인-회원가입{% endblock %}
 {% block css %} 
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.css' %}" />
 <link rel="stylesheet" href="{% static 'css/login_register.css' %}" />
 <link
 	href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
 	rel="stylesheet" />
-{% endblock %} {% block js %} {% load static %}
+{% endblock %}
+
+<!-- prettier-ignore -->
+{% block js %} {% load static %}
 <script src="{% static 'js/login_register.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-{% endblock %} {% block content %}
+{% endblock %}
+
 <!-- prettier-ignore -->
+{% block content %}
 {% csrf_token %}
 <div class="wrapper">
 	{% if messages %}
