--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -11,7 +11,9 @@
 	<body>
 		<nav class="navbar">
 			<div class="nav-container">
-				<a href="{% url 'chatbot-index' %}" class="nav-logo">VINO</a>
+				<a href="{% url 'chatbot-index' %}" class="nav-logo">
+					<img src="{% static 'img/logo.png' %}" alt="Logo" id="logo" />
+				</a>
 
 				<div class="nav-toggle" id="nav-toggle">
 					<i class="fa fa-bars"></i>
