--- a/templates/chatbot/main.html
+++ b/templates/chatbot/main.html
@@ -4,7 +4,7 @@
 
 <!-- prettier-ignore -->
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}" />
+<link rel="stylesheet" href="{% static 'css/main.css' %}" />
 {% endblock %}
 
 <!-- prettier-ignore -->
