--- a/templates/chatbot/chatbot.html
+++ b/templates/chatbot/chatbot.html
@@ -4,7 +4,7 @@
 
 {% block css %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}" />
+<link rel="stylesheet" href="{% static 'css/main.css' %}" />
 <link rel="stylesheet" href="{% static 'css/chatbot.css' %}" />
 {% endblock %}
 
